Update AdManagerAppMainMenuInterface.java